manifests/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fromtisws
  labels:
    app: fromtisws
  namespace: apps
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fromtisws
  template:
    metadata:
      labels:
        app: fromtisws
    spec:
      containers:
      - name: fromtisws
        image: gru.ocir.io/greggn67nu05/novabuild:develop-v56
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      imagePullSecrets:
        - name: ocirsecret
---
apiVersion: v1
kind: Service
metadata:
  name: fromtisws-service
  labels:
    app: fromtisws
  namespace: apps
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  type: LoadBalancer
  selector:
    app: fromtisws
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
