manifests/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-fromtisws
  labels:
    name: ingress-fromtisws
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-prod
    acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
    argocd.argoproj.io/sync-wave: "3"
spec:
  ingressClassName: nginx
  rules:
  - host: fromtisws.app.dev.certdox.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: fromtisws-service
            port: 
              number: 8080
  tls:
  - hosts:
    - "fromtisws.app.dev.certdox.io"
    secretName: fromtisws-ssl
